--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/v4.loader.js";
+      var loaderUrl = buildUrl + "/v4.1web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/v4.data",
-        frameworkUrl: buildUrl + "/v4.framework.js",
-        codeUrl: buildUrl + "/v4.wasm",
+        dataUrl: buildUrl + "/v4.1web.data",
+        frameworkUrl: buildUrl + "/v4.1web.framework.js",
+        codeUrl: buildUrl + "/v4.1web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Hungry-jumper",
