Added some gifs

--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
         <img src="circuit_schematic.png" style="width: 33%" id="circuit_img"/>
         <img src="circuit_build.jpg" style="width: 48.3%" id="build_img"/>
     </div>
+    <div style="text-align:center">
+        <img src="lcd_demonstration.gif" style="width: 40.5%" id="lcd_img"/>
+        <img src="oled_demonstration.gif" style="width: 40.5%" id="oled_img"/>
+    </div>
     <div style="margin: 3% 0 0 0;text-align:center">
         <button onclick="window.location.href = 'code.html';" style="font-size:3vw;width: 50%;height:20vw">ПОСМОТРЕТЬ КОД</button>
     </div>
   <script>
     document.getElementById("circuit_img").addEventListener("click", function(){window.location.href = "circuit_schematic.html"})
     document.getElementById("build_img").addEventListener("click", function(){window.location.href = "circuit_build.html"})
+    document.getElementById("lcd_img").addEventListener("click", function(){window.location.href = "lcd.html"})
+    document.getElementById("oled_img").addEventListener("click", function(){window.location.href = "oled.html"})
   </script>
 </body>
 </html>
